NEWS about R package optimx

Some comments apply to deprecated packages optimr on CRAN and optimrx on R-forge

TODO
      o trig1507.R issue of bounds to avoid multiple minima, note ttrig8b lbfgsb3 etc.
      o Put counters in efn, egr
      o General issue: nlminb and possibly nlm not working as Newton with 
	explicit Hessian i.e., may "work", but not seemingly like Newton
      o Should add examples, esp. of use of summary.
      o Rationalize tests, examples, unit tests and demos.
      o can we add bounds and masks easily to Newton methods?
      o Drop nmkb from methods for bounds if start is on bound
      o Add nloptr methods -- there are a number and we need to choose how
	to do so. Seems unable to handle parameter scaling or dot arguments.
        nloptr difficult to incorporate -- for now left outside of optimr()
        Troubles with NAMESPACE collisions NOT resolved for nloptr
      o Consider how the hyperbolic transformation (transfinite fn)
        could be used in all unconstrained methods
        How can transfinite be made to work when start is on bounds?
	To work when end is on bounds?
      o Rcgmin seems to report reset of parameters to bounds when parameter
        is apparently on the bound. Could have rounding issues, and should
        avoid this warning if it is really not needed.
      o Do NOT add ipoptr until non-standard install is fixed up.
      o Check all failures reported below are fixed! (As at 2018-03-27
	JN believes they are.)

VERSION 2018-03-27
      o Changed Rvmmin call. Rvmminb and Rvmminu NOT now called separately,
	as user may inadvertently supply inadmissible parameters and get wrong
	answer.
      o Changed optimr() so nlminb() can use ehess() function
      o Replace convcode in optimr() with convergence to align with optim() result
      o axsearch() example added to bdstest.R in tests.
      o Merged optextras package into optimx
      o rationalized  optimz-package.R, optimx-package.R into one set of code