@@ -1,8 +1,8 @@
 Package: snewton
 Type: Package
 Title: Safeguarded Newton Approach for Function Minimization
-Version: 2018-3.03
-Date: 2018-03-03
+Version: 2018-3.29
+Date: 2018-03-29
 Authors@R: c( person(given = c("John", "C."), family = "Nash", role =
         c("aut", "cre"), email = "nashjc@uottawa.ca") )
 Maintainer: John C. Nash <nashjc@uottawa.ca>
