@@ -5,6 +5,9 @@ TODOS
   o add convcode (align names with optimr)
   o try to figure out nlminb failures / non-Newton-like behaviour
 
+2018-02-29
+  o minor fixes discovered working on optimx
+
 2018-03-03
   o update vignette and tests
   
